--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,30 +1,59 @@
+<%= search_form_for @q do |f| %> 
+  <%= f.label:title_or_description_or_author_cont %> 
+  <%= f.search_field:title_or_description_or_author_cont %>
+
+  <%= f.submit %> 
+<% end %>
+
 <p id="notice"><%= notice %></p>
-<h1>Posts</h1>
-<%= link_to 'New Post', new_post_path %>
-<br />
-<table>
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th>Description</th>
-      <th>Author</th>
-      <th>Status</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-  <tbody>
-    <% @posts.each do |post| %>
-    <tr>
-      <td><%= post.title %></td>
-      <td><%= post.description %></td>
-      <td><%= post.author %></td>
-      <td><%= post.status %></td>
-      <td><%= link_to 'Show', post %></td>
-      <td><%= link_to 'Edit', edit_post_path(post) %></td>
-      <td>
-        <%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %>
-      </td>
-    </tr>
+<div class="row">
+  <div class="col-md-3 offset-md-2">
+    <%= search_form_for @q do |f| %>
+    <div class="form-group">
+      <%= f.label :title_or_description_or_author_cont %> 
+      <%= f.search_field:title_or_description_or_author_cont, class: "formcontrol", placeholder:"Search text" %>
+    </div>
+    <div class="form-group">
+      <%= f.label :status_eq, "Status" %>
+      <%= f.select :status_eq, options_for_select(Post.statuses , @q.status_eq), {},{class:"form-control"} %>
+    </div>
+    <%= f.submit "Search", class: "btn btn-primary" %>
     <% end %>
-  </tbody>
-</table>
+  </div>
+</div>
+<div class="row">
+  <div class="col-md-8 offset-md-2">
+    <table class="table">
+      <thead>
+        <tr>
+          <th>Title</th>
+          <th>Description</th>
+          <th>Author</th>
+          <th>Status</th>
+          <th colspan="3"></th>
+        </tr>
+      </thead>
+      <tbody>
+        <% @posts.each do |post| %>
+        <tr>
+          <td><%= post.title %></td>
+          <td><%= post.description %></td>
+          <td><%= post.author %></td>
+          <td><%= post.status %></td>
+          <td><%= link_to 'Show', post %></td>
+          <td><%= link_to 'Edit', edit_post_path(post) %></td>
+          <td>
+            <%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %>
+          </td>
+        </tr>
+        <% end %>
+      </tbody>
+    </table>
+  </div>
+</div>
+
+<div class="row">
+  <div class="col-md-8 offset-md-2">
+    <%= link_to 'New Post', new_post_path %>
+  </div>
+</div>
