--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,7 +1,6 @@
 <%= search_form_for @q do |f| %> 
-  <%= f.label:title_or_description_or_author_cont %> 
-  <%= f.search_field:title_or_description_or_author_cont %>
-
+  <%= f.label :title_or_description_or_author_cont %> 
+  <%= f.search_field :title_or_description_or_author_cont %>
   <%= f.submit %> 
 <% end %>
 
@@ -9,15 +8,15 @@
 <div class="row">
   <div class="col-md-3 offset-md-2">
     <%= search_form_for @q do |f| %>
-    <div class="form-group">
-      <%= f.label :title_or_description_or_author_cont %> 
-      <%= f.search_field:title_or_description_or_author_cont, class: "formcontrol", placeholder:"Search text" %>
-    </div>
-    <div class="form-group">
-      <%= f.label :status_eq, "Status" %>
-      <%= f.select :status_eq, options_for_select(Post.statuses , @q.status_eq), {},{class:"form-control"} %>
-    </div>
-    <%= f.submit "Search", class: "btn btn-primary" %>
+      <div class="form-group">
+        <%= f.label :title_or_description_or_author_cont %> 
+        <%= f.search_field :title_or_description_or_author_cont, class: "form-control", placeholder:"Search text" %>
+      </div>
+      <div class="form-group">
+        <%= f.label :status_eq, "Status" %>
+        <%= f.select :status_eq, options_for_select(Post.statuses , @q.status_eq), {},{class:"form-control"} %>
+      </div>
+      <%= f.submit "Search", class: "btn btn-primary" %>
     <% end %>
   </div>
 </div>
