--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,8 +1,3 @@
-<%= search_form_for @q do |f| %> 
-  <%= f.label :title_or_description_or_author_cont %> 
-  <%= f.search_field :title_or_description_or_author_cont %>
-  <%= f.submit %> 
-<% end %>
 
 <p id="notice"><%= notice %></p>
 <div class="row">
@@ -25,10 +20,10 @@
     <table class="table">
       <thead>
         <tr>
-          <th>Title</th>
+          <th><%= sort_link(@q, :title) %></th>
           <th>Description</th>
           <th>Author</th>
-          <th>Status</th>
+          <th><%= sort_link(@q, :status) %></th>
           <th colspan="3"></th>
         </tr>
       </thead>
